# snippet

./: .gitignore  README.md  TODO.md  config.toml  default.nix  example.conf  flake.nix  makefile  meson.build  release.nix
src/: config.cc  config.h  main.cc  toml.cc  toml.h
templates/: Runner.java  Screen.java
